[build-system]
requires = [
  "setuptools >= 65.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "bertron"
# Project version identifier.
#
# Note: The GitHub Actions workflow in `.github/workflows/build-and-push-image.yaml`
#       will replace this version identifier when building a container image. The
#       replacement will be the name of the Git tag associated with the GitHub Release
#       whose publishing triggered the GitHub Actions workflow run.
#
version = "0.0.0"
authors = [
  {name = "Chuck Parker", email = "ctparker@lbl.gov"},
]
description = " Cross-BER Data Integration"
readme = "README.md"
requires-python = ">=3.12.9,<3.14"
dependencies = [
  "bertron-schema @ git+https://github.com/ber-data/bertron-schema.git",
  "dtspy @ https://github.com/kbase/dtspy/archive/730828cff3924fc4b2215fe5c1b67bc04aad377f.tar.gz",
  "fastapi[standard]>=0.115.12",
  "jsonschema>=4.0.0",
  "nmdc-api-utilities>=0.3.9",
  "pymongo>=4.13.1",
  "pytest>=8.4.0",
  "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pyright>=1.1.386",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
