[build-system]
requires = [
  "setuptools >= 65.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "bertron-client"
# Project version identifier.
#
# Note: The GitHub Actions workflow in `.github/workflows/build-and-push-image.yaml`
#       will replace this version identifier when building a container image. The
#       replacement will be the name of the Git tag associated with the GitHub Release
#       whose publishing triggered the GitHub Actions workflow run.
#
version = "0.0.0"
authors = [
  {name = "Charles Parker", email = "ctparker@lbl.gov"},
  {name = "Jeffrey N. Johnson", email = "jeff@cohere-llc.com"},
]
description = "Cross-BER Data Integration Client"
readme = "README.md"
requires-python = ">=3.12.9,<3.14"
dependencies = [
  # NOTE: bertron and bertron-schema won't be needed when we autogenerate the client from
  # NOTE: an OpenAPI spec.
  "bertron @ git+https://github.com/ber-data/bertron.git@v0.1.0-alpha.11",
  "bertron-schema @ git+https://github.com/ber-data/bertron-schema.git@v0.1.0-alpha.11",
  "numpy",
  "pandas>=2.2.2",
  "matplotlib",
  "seaborn",
  #"jsonschema>=4.0.0",
  "pytest>=8.4.0",
  "uvicorn>=0.34.3",
  "ipykernel",
  "pip"
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pyright>=1.1.386",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
